Deal with more layout issues.
Need to use page.is_home_page with Jekyll; apparently layout... doesn't
work.  At least not in the version of Jekyll I'm using at home.  No
telling what GitHub wants, but I'm not going to worry about it too much.

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -72,7 +72,7 @@ body {
 }
 
 .site-title {
-  @include relative-font-size(1.625);
+  @include relative-font-size(1.25);
   font-weight: 300;
   line-height: $base-line-height * $base-font-size * 2.25;
   letter-spacing: -1px;
